# BDC_Dashboard

./: .dockerignore  .env.sample  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  docker-compose-up.sh  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-api-to-app-engine.yml  deploy-api-to-azure.yml  publish-to-quay.yml  test.yml
ansible/: README.md  deploy-pg.yml  inventory  inventory.example  setup.yml
ansible/group_vars/all/: nimbus.yml  users.yml  users.yml.example
ansible/templates/: db_backup.sh  docker-compose.yml
api/: .dockerignore  .env.sample  .gcloudignore  Dockerfile  Pipfile  app.yaml  development_backend.py  docker_entrypoint.sh  main.py  manage.py  requirements.txt  testrunner.py
api/bdcat_data_submission/: asgi.py  settings.py  test.py  urls.py  wsgi.py
api/nihsso/: adapters.py  apps.py  provider.py  urls.py  views.py
api/staticfiles/: staticfiles.json
api/staticfiles/tracker/: style.033070d488ca.css  style.19fb552a0625.css  style.4f2dcf4e3a44.css  style.53cab0f677df.css  style.61b77cc99524.css  style.648e4ff7c8c2.css  style.684167c68bd2.css  style.70269f16681d.css  style.7e5f5ac5634d.css  style.8d4b5cf618a0.css  style.9edd5f0f336d.css  style.a3f73f306a62.css  style.d18e8bb790ae.css  (+4 more)
api/templates/: base_generic.html
api/tracker/: admin.py  cloud_storage.py  forms.py  freshdesk_agent.py  jira_agent.py  jira_data.py  jira_fields.json  mail.py  middleware.py  models.py  test.py  urls.py  validators.py  views.py
azure/: README.md
bdcat_data_submission/: settings.py  urls.py
openshift/: BuildConfig.yaml  DeploymentConfig.yaml  README.md  deployment.yml  route.yml  service.yml
templates/: base_generic.html
tracker/: urls.py  views.py
tracker/migrations/: 0001_initial.py
(+54 files in other folders)
