[tool.poetry]
name = "bdc-dashboard"
version = "0.1.0"
description = "Data Submission Tracker for the Data Management Core on BioData Catalyst."
authors = ["Corey Cox <69321580+amc-corey-cox@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "api/"}]

[tool.poetry.dependencies]
python = "3.11.1"
asgiref = "3.6.0"
cachetools = "5.0.0"
certifi = "2021.10.8"
cffi = "1.15.0"
cryptography = "38.0.4"
defusedxml = "0.7.1"
django = "4.1.4"
django-allauth = "0.51.0"
django-debug-toolbar = "3.8.1"
django-environ = "0.9.0"
django-extensions = "3.2.1"
django-health-check = "3.17.0"
django-sendgrid-v5 = "1.2.1"
django-simple-history = "3.2.0"
django-widget-tweaks = "1.4.12"
google-api-core = {version = "2.11.0", extras = ["grpc"]}
google-auth = "2.15.0"
google-cloud-secret-manager = "2.13.0"
googleapis-common-protos = "1.57.0"
grpc-google-iam-v1 = "0.12.4"
grpcio = "1.51.0"
grpcio-status = "1.51.0"
idna = "3.4"
libcst = "0.4.9"
mypy-extensions = "0.4.3"
oauthlib = "3.2.2"
proto-plus = "1.22.1"
protobuf = "4.21.12"
psycopg2-binary = "2.9.5"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pycparser = "2.21"
python-dotenv = "0.21.0"
pyjwt = {version = "2.6.0", extras = ["crypto"]}
python-http-client = "3.3.7"
python3-openid = "3.2.0"
pyyaml = "6.0"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
rsa = "4.9"
sendgrid = "6.9.7"
six = "1.16.0"
sqlparse = "0.4.3"
starkbank-ecdsa = "2.2.0"
typing-extensions = "4.4.0"
typing-inspect = "0.8.0"
urllib3 = "1.26.13"
whitenoise = "6.2.0"
jira = "^3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160